--- a/README
+++ b/README
@@ -5,6 +5,8 @@ ccplot is a python program that reads CloudSat, CALISO and Aqua MODIS HDF
 and HDF-EOS data files, and produces plots of profile, layer and swath
 products.
 
+1. PRODUCTS
+
 The following products are supported:
 
 	CloudSat Reflectivity Factor
@@ -21,4 +23,47 @@ The following products are supported:
 	CloudSat trajectory
 	CALIPSO trajectory
 	Aqua MODIS radiance and reflectance bands (except band 26)
+
+2. COLORMAP FILES
+
+ccplot uses a custom colormap file format called cmap. You can find example
+cmap files in /usr/share/ccplot/cmap/.
+
+(a) Writing a custom cmap file
+
+cmap files are simple ASCII files in format:
+    
+    BOUNDS
+    from1 to1 step1
+    from2 to2 step2
+    ...
+    
+    TICKS
+    from1 to1 step1
+    from2 to2 step2
+    
+    COLORS
+    r1 g1 b1 a1
+    r2 g2 b2 a2
+    ...
+    
+    UNDER_OVER_BAD_COLORS
+    r1 g1 b1 a1
+    r2 g2 b2 a2
+    r3 g3 b3 a3
+    
+Where fromn, ton, stepn are floating point numbers, and rn, gn, bn are RGBA
+(Red Green Blue Alpha) color components of the n-th color stripe.
+Components are expected to be in base 10 format (0-255). All sections
+except COLORS are optional.
+
+    * BOUNDS section specifies color mapping regions.
+
+    * TICKS section specifies tick labels to appear on the colorbar.
+    
+    * COLORS section spefifies RGBA colors of the colormap, one color per line.
+
+    * UNDER_OVER_BAD_COLORS section specifies colors to be used for
+      over, under and bad (masked; missing) values in that order.
+
 
