--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 CCPLOT NEWS
 
+New in 1.3.1 (2009-09-21):
+
+    * Fixed CALIPSO plots time extent bug.
+
 New in 1.3 (2009-09-20):
 
     * Changed the semantics of -x command-line argument.
