--- a/README
+++ b/README
@@ -9,7 +9,7 @@ products.
 
 The following products are supported:
 
-	CloudSat Reflectivity Factor
+	CloudSat 2B-GEOPROF Reflectivity Factor
 	CALIPSO L1B Total Attenuated Backscatter 532nm
  	CALIPSO L1B Perpendicular Attenuated Backscatter 532nm
 	CALIPSO L1B Attenuated Backscatter 1064nm
